--- a/Team.qmd
+++ b/Team.qmd
@@ -7,7 +7,7 @@ affiliation: "Singapore Management University MITB (Analytics)"
 
 ## Members
 
--   [AISHWARYA SANJAY MALOO](www.linkedin.com/in/aishwarya-maloo "linkedin")
+-   [AISHWARYA SANJAY MALOO](https://www.linkedin.com/in/aishwarya-maloo)
 
 -   [HuoDa](https://medium.com/@ivory_data "Medium")
 
